--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "country-state-city": "^3.2.1",
+    "joi": "^17.10.2",
+    "mui-phone-number": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.11",
